--- a/blog_prep/2017-03-07-amazon-reviews-wordcloud.Rmd
+++ b/blog_prep/2017-03-07-amazon-reviews-wordcloud.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "2017-03-07-amazon-reviews-wordcloud"
+author: Kasia Kulma
 output: html_document
 ---
 
@@ -7,16 +8,26 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## importing Amazon reviews 
+In the last month I discovered two things that changed my life: audiobooks and [Yuval Harari](https://en.wikipedia.org/wiki/Yuval_Noah_Harari). The former completely transformed my daily commute, the latter changed the way I think about the surrounding world (with more appreciation for history and politics, to say the least). The cocktail of the two made my brain cells sing.
+
+Harari published two books in the last three years: [Sapiens: A Brief History of Humankind](https://www.amazon.co.uk/Sapiens-Humankind-Yuval-Noah-Harari/dp/1846558239) and more recently: [Homo Deus: A Brief History of Tomorrow](https://www.amazon.co.uk/Homo-Deus-Brief-History-Tomorrow/dp/1910701874/). Both perspective - changing, right?
+
+My opinions aside, what do other readers think about his books? Let's dig into it by scraping Amazon reviews of "Sapiens" and then visualising their most common words in a wordcloud.
 
 ### loading packages 
 ```{r echo = TRUE, results='hide', message=FALSE, warning=FALSE}
 install.packages("pacman", repos = "http://cran.us.r-project.org")
-pacman::p_load(XML, dplyr, stringr, rvest)
+pacman::p_load(XML, dplyr, stringr, rvest, xml2) # web-scraping
+pacman::p_load(tm, rvest, SnowballC, wordcloud) # wordcloud-building
+
 ```
 
 
 ### importing Amazon reviews for Yuval Harari's "Sapiens"
+
+The web-scraping procedures that follow were shamelessly "borrowed" from [Riki Saito's blog](https://justrthings.wordpress.com/2016/08/17/web-scraping-and-sentiment-analysis-of-amazon-reviews/). Thanks, mate!
+
+The following code requires _Amazon's product code_, which can be found in the product's URL. Next, it scrapes the product's name, just to confirm we got everything right!
 
 ```{r echo = TRUE}
 # define a function removing all white space
@@ -25,14 +36,14 @@ trim <- function (x) gsub("^\\s+|\\s+$", "", x)
 # define product code and the url
 prod_code = "1846558239"
 url <- paste0("https://www.amazon.co.uk/dp/", prod_code)
-doc <- read_html(url)
+doc <- xml2::read_html(url)
 
 #obtain the text in the node, remove "\n" from the text, and remove white space
 prod <- html_nodes(doc, "#productTitle") %>% html_text() %>% gsub("\n", "", .) %>% trim()
 prod
 ```
 
-the web-scraping procedure and the function was described [here](https://justrthings.wordpress.com/2016/08/17/web-scraping-and-sentiment-analysis-of-amazon-reviews/)
+So far, so good. Now, after sourcing `amazon_scraper` function from Riki's Github page, I import first 50 pages of reviews of _Sapiens_:
 
 ```{r echo = TRUE}
 # THE KEY: Source function to parse Amazon html pages for data
@@ -41,36 +52,37 @@ source("https://raw.githubusercontent.com/rjsaito/Just-R-Things/master/Text%20Mi
 
 
 ```{r echo = TRUE}
-pages <- 100
+pages <- 50
 
 reviews_all <- NULL
 
 for(page_num in 1:pages){
-  url <- paste0("http://www.amazon.co.uk/product-reviews/",prod_code,"/?pageNumber=", page_num)
-  doc <- read_html(url)
+  url2 <- paste0("http://www.amazon.co.uk/product-reviews/",prod_code,"/?pageNumber=", page_num)
+  doc2 <- read_html(url2)
   
-  reviews <- amazon_scraper(doc, reviewer = F, delay = 2)
-  reviews_all <- rbind(reviews_all, cbind(prod, reviews))
+  reviews <- amazon_scraper(doc2, reviewer = F, delay = 2)
+  reviews_all <- rbind(reviews_all, reviews)
 }
-
 ```
+
+It looks like everything worked! The returned data frame contains not only date, title, author and content of every review, but also number of stars given, format of the book that the review is for and even the number of people that thought this particular review was helpful, priceless!
 
 ```{r echo = TRUE}
 str(reviews_all)
 ```
 
+In this post I'll focus on the review content only. Here's what the exemplary comment looks like:
+
 ```{r echo = TRUE}
-reviews_all[1, 8]
+reviews_all[1, 7]
 ```
 
+As you can tell, it's not in the best shape for the analysis: it contains punctuation signs, numbers, lower and upper letters, etc. Let's sort it out by doing some text pre-processing:
 
 ### text pre-processing 
 
 ```{r echo = TRUE}
 #### creating corpus 
-
-pacman::p_load(tm, rvest, SnowballC, wordcloud)
-
 m <- list(content = "comments")
 myReader <- readTabular(mapping = m)
 
@@ -88,7 +100,11 @@ sapiens_corpus = tm_map(sapiens_corpus, removeNumbers)
 
 ## LowerCase
 sapiens_corpus = tm_map(sapiens_corpus, tolower)
+```
 
+I also removed some uninformative words, together with English stopwords, to make the results clearer:
+
+```{r echo=TRUE}
 ## remove stopwords and other words
 myWords=c("format", "paperback", "kindle", "edit", "hardcov", "book", "read", "will", "just", "can", "much")
 
@@ -96,14 +112,12 @@ sapiens_corpus <- tm_map(sapiens_corpus, removeWords, c(stopwords("english"), my
 
 ## treat pre-processed documents as text documents
 sapiens_corpus <- tm_map(sapiens_corpus, PlainTextDocument) 
-corpus[[1]]$content
 
 ## turn into doc matrix
 sapiens_dtm <- DocumentTermMatrix(sapiens_corpus)
-sapiens_dtm
-inspect(sapiens_dtm)
 ```
 
+Let's have a quick peek into the top 20 most frequent words:
 
 ```{r echo = TRUE}
 # displaying most frequent words
@@ -111,10 +125,13 @@ freq <- sort(colSums(as.matrix(sapiens_dtm)), decreasing=TRUE)
 head(freq, 20)  
 ```
 
+
+And finally, crème de la crème, the wordcloud showing 250 most frequent words found in Amazon reviews of _Sapiens_:
+
 ### creating a wordcloud with the top 250 most frequent words
 
-```{r echo = TRUE}
-pal=brewer.pal(10, "Set1")
+```{r echo = TRUE, warning=FALSE, message=FALSE}
+pal=brewer.pal(9, "Set1")
 
 set.seed(100)
 wordcloud(words = names(freq), freq = freq, max.words=250,
